--- a/Pokidex.ipynb
+++ b/Pokidex.ipynb
@@ -1356,7 +1356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4rc1"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
